# unrealStylesheet

./: .gitattributes  LICENSE  README.md  main.py  pyproject.toml  ue.qss  ue.scss
tests/: requirements.txt  test_qt_wrappers.py
tests/sample_ui/: editor.ui  main.ui  progress.ui  tree.ui
unreal_qt_stylesheet/: main.py
unreal_stylesheet/: __init__.py  icons.qrc  icons.rcc  main.py  ue.qss  ue.scss
