[build-system]
requires = ["setuptools", "setuptools-scm"]
#build-backend = "setuptools.build_meta"


[tool.setuptools]
packages = ["unreal_stylesheet"]


[project]
name = "unreal-stylesheet"
authors = [
    {name = "Xingyu Lei"},
    {name = "Hannes Delbeke"},
]
description = "style qt like unreal 5"
readme = "README.md"
requires-python = ">=3.4"
keywords = ["qt", "unreal", "unrealengine", "engine", "pyside", "pyside2", "pyside6", "PyQt5", "PyQt6", "stylesheet", "dark", "night", "theme", "darkmode", "ui"]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3.7",
]
#dynamic = ["dependencies"]
dependencies = ['importlib-metadata; python_version<"3.7"']
#dynamic = ["version"]
version = "0.0.3"

#[project.optional-dependencies]
#yaml = ["pyyaml"]

#[project.scripts]
#my-script = "my_package.module:function"

[project.urls]
Homepage = "https://github.com/leixingyu/unrealStylesheet"
Source = "https://github.com/leixingyu/unrealStylesheet"
